syntax = "proto3";
option java_multiple_files = true;
package movie;
// option go_package = "./";
option java_package = "com.msa.ticket.frontend.rpc.grpc.movie.server";

message MovieMsgRequest {
    int32 count = 1;
}

message MovieMsgReply {
    string message = 1;
}

service MovieRPC {
    rpc GetAllMovies (MovieMsgRequest) returns (MovieMsgReply){}
}