syntax = "proto3";
option java_multiple_files = true;
package user;
// option go_package = "./";
option java_package = "com.msa.ticket.frontend.rpc.grpc.user.server";

message UserMsgRequest {
    int32 count = 1;
}

message UserMsgReply {
    string message = 1;
}

service UserRPC {
    rpc GetAllUsers (UserMsgRequest) returns (UserMsgReply){}
}